# autoresearch

./: .gitignore  LEARNING.md  README-EN.md  README-ZH-CN.md  README-ZH-TW.md  README.md  problem.md  program.md  pyproject.toml  run_task.py  task.json
.learning/: 00-Core-Concepts.md  00-核心概念.md  README.md  SUMMARY.md
tasks/api_bugfix_assistant/: README.md  evaluate.py
tasks/api_bugfix_assistant/workspace/: api_client.py
tasks/example_twin_prime_solver/: README.md  evaluate.py
tasks/example_twin_prime_solver/workspace/: solver.py
